[gd_scene load_steps=19 format=3 uid="uid://djfsbxofc6pyx"]

[ext_resource type="Script" path="res://scripts/GameOver.gd" id="1_v3tj1"]
[ext_resource type="PackedScene" uid="uid://ct2kx3sfx38hd" path="res://scenes/Main.tscn" id="2_vp55n"]
[ext_resource type="Texture2D" uid="uid://260euredbq8j" path="res://art/grass.png" id="3_n7huc"]
[ext_resource type="Texture2D" uid="uid://vxky0jmvljkl" path="res://art/game_over.png" id="4_1g2tg"]
[ext_resource type="Texture2D" uid="uid://cnhx7vjtimnxd" path="res://art/rank/rank_char_C.png" id="4_qmpwo"]
[ext_resource type="Texture2D" uid="uid://bjfv5xaxy5s7s" path="res://art/rank/rank_char_D.png" id="5_6yrjk"]
[ext_resource type="Texture2D" uid="uid://durls82xyfgxn" path="res://art/rank/rank_char_B.png" id="5_aut36"]
[ext_resource type="Texture2D" uid="uid://cg2ok14vvo5ki" path="res://art/rank/rank_char_A.png" id="6_2lq8r"]
[ext_resource type="Texture2D" uid="uid://bpxe1ksbxljav" path="res://art/rank/rank_letter_D.png" id="6_n8g7u"]
[ext_resource type="FontFile" uid="uid://dv3uphqwjuk7m" path="res://art/OtsutomeFont_Ver3.ttf" id="7_tblsk"]
[ext_resource type="Texture2D" uid="uid://bbb7nx7g7013g" path="res://art/rank/rank_char_S.png" id="7_xsves"]
[ext_resource type="Texture2D" uid="uid://c0j6ibj7tkg5s" path="res://art/rank/rank_letter_C.png" id="9_kxg1v"]
[ext_resource type="Texture2D" uid="uid://cgmsfdhwrvl44" path="res://art/rank/rank_letter_B.png" id="10_pkefc"]
[ext_resource type="Texture2D" uid="uid://8l5af1vgk01i" path="res://art/rank/rank_letter_A.png" id="11_0yvct"]
[ext_resource type="Texture2D" uid="uid://d2e851tty6iwv" path="res://art/rank/rank_letter_S.png" id="12_0ytg4"]
[ext_resource type="Texture2D" uid="uid://cb35pwcs5i5xc" path="res://art/rank/rank_char_Invalid.png" id="15_4kiun"]
[ext_resource type="Texture2D" uid="uid://c3xeukwitivxf" path="res://art/rank/rank_letter_Invalid.png" id="16_m2nhc"]

[sub_resource type="LabelSettings" id="LabelSettings_gl0wf"]
line_spacing = 0.0
font = ExtResource("7_tblsk")
font_size = 64
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-3, 3)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v3tj1")
game_scene = ExtResource("2_vp55n")
rank_conditions = Array[int]([0, 400, 900, 1600, 2500])
rank_char_resources = Array[Resource]([ExtResource("5_6yrjk"), ExtResource("4_qmpwo"), ExtResource("5_aut36"), ExtResource("6_2lq8r"), ExtResource("7_xsves")])
rank_letter_resources = Array[Resource]([ExtResource("6_n8g7u"), ExtResource("9_kxg1v"), ExtResource("10_pkefc"), ExtResource("11_0yvct"), ExtResource("12_0ytg4")])

[node name="Grass" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_n7huc")

[node name="GameOver" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -153.0
offset_right = 1127.0
offset_bottom = 720.0
texture = ExtResource("4_1g2tg")

[node name="RankChar" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 1.0
offset_right = 1280.0
offset_bottom = 721.0
texture = ExtResource("15_4kiun")

[node name="RankLetter" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 652.0
offset_top = 454.0
offset_right = 908.0
offset_bottom = 710.0
texture = ExtResource("16_m2nhc")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 421.0
offset_right = 480.0
offset_bottom = 525.0
theme_override_colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.560784, 0.560784, 1)
theme_override_colors/font_hover_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("7_tblsk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Retry"
flat = true

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 273.0
offset_top = 542.0
offset_right = 479.0
offset_bottom = 646.0
theme_override_colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.560784, 0.560784, 1)
theme_override_colors/font_hover_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("7_tblsk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Quit"
flat = true

[node name="RankLabel" type="Label" parent="."]
layout_direction = 3
layout_mode = 0
offset_left = 619.0
offset_top = 531.0
offset_right = 833.0
offset_bottom = 596.0
text = "Rank"
label_settings = SubResource("LabelSettings_gl0wf")

[node name="ScoreLabel" type="Label" parent="."]
layout_direction = 3
layout_mode = 0
offset_left = 411.0
offset_top = 399.0
offset_right = 625.0
offset_bottom = 464.0
text = "1000 points"
label_settings = SubResource("LabelSettings_gl0wf")
